[gd_scene load_steps=5 format=3 uid="uid://bqpwmqcil0l8o"]

[ext_resource type="Script" path="res://Level/LevelScenes/CharacterCustomizer/CharacterCustomizer.gd" id="1_ftbbs"]
[ext_resource type="Script" path="res://Level/LevelScenes/CharacterCustomizer/UtilityBoxes.gd" id="2_otb1w"]
[ext_resource type="Script" path="res://Level/LevelScenes/CharacterCustomizer/InventoryItem.gd" id="2_ssllx"]
[ext_resource type="Script" path="res://Level/LevelScenes/CharacterCustomizer/SpaceButton.gd" id="3_x2llr"]

[node name="CharacterCustomizer" type="Node" node_paths=PackedStringArray("item_list", "utility_container")]
script = ExtResource("1_ftbbs")
item_list = NodePath("Control/PanelContainer/MarginContainer/HBoxContainer/ItemContainer/MarginContainer/VBoxContainer/ItemList")
utility_container = NodePath("Control/PanelContainer/MarginContainer/HBoxContainer/CharacterContainer/MarginContainer/VBoxContainer/UtilitiesContainer/UtilityBoxes")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ItemContainer" type="PanelContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer/ItemContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer/ItemContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/HBoxContainer/ItemContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Inventory"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Control/PanelContainer/MarginContainer/HBoxContainer/ItemContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ItemList" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer/ItemContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Item" type="PanelContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer/ItemContainer/MarginContainer/VBoxContainer/ItemList" node_paths=PackedStringArray("icon", "label")]
visible = false
layout_mode = 2
script = ExtResource("2_ssllx")
icon = NodePath("HBoxContainer/TextureRect")
label = NodePath("HBoxContainer/Label")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer/ItemContainer/MarginContainer/VBoxContainer/ItemList/Item"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Control/PanelContainer/MarginContainer/HBoxContainer/ItemContainer/MarginContainer/VBoxContainer/ItemList/Item/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/HBoxContainer/ItemContainer/MarginContainer/VBoxContainer/ItemList/Item/HBoxContainer"]
layout_mode = 2
text = "Item"

[node name="Button" type="Button" parent="Control/PanelContainer/MarginContainer/HBoxContainer/ItemContainer/MarginContainer/VBoxContainer/ItemList/Item/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "->"

[node name="VSeparator" type="VSeparator" parent="Control/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="CharacterContainer" type="PanelContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer/CharacterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer/CharacterContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/HBoxContainer/CharacterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Character"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Control/PanelContainer/MarginContainer/HBoxContainer/CharacterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="UtilitiesContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer/CharacterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/HBoxContainer/CharacterContainer/MarginContainer/VBoxContainer/UtilitiesContainer"]
layout_mode = 2
text = "Utilities"

[node name="UtilityBoxes" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer/CharacterContainer/MarginContainer/VBoxContainer/UtilitiesContainer" node_paths=PackedStringArray("empty_space")]
layout_mode = 2
script = ExtResource("2_otb1w")
empty_space = NodePath("EmptySpace")

[node name="EmptySpace" type="PanelContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer/CharacterContainer/MarginContainer/VBoxContainer/UtilitiesContainer/UtilityBoxes"]
visible = false
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="Button" type="Button" parent="Control/PanelContainer/MarginContainer/HBoxContainer/CharacterContainer/MarginContainer/VBoxContainer/UtilitiesContainer/UtilityBoxes/EmptySpace"]
visible = false
layout_mode = 2
script = ExtResource("3_x2llr")

[node name="Confirm" type="Button" parent="Control/PanelContainer/MarginContainer/HBoxContainer/CharacterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Confirm"

[node name="Back" type="Button" parent="Control/PanelContainer"]
modulate = Color(0, 0.45098, 1, 1)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
text = "<-"

[connection signal="item_chosen" from="Control/PanelContainer/MarginContainer/HBoxContainer/ItemContainer/MarginContainer/VBoxContainer/ItemList/Item" to="." method="_on_inventory_item_clicked"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/HBoxContainer/ItemContainer/MarginContainer/VBoxContainer/ItemList/Item/HBoxContainer/Button" to="Control/PanelContainer/MarginContainer/HBoxContainer/ItemContainer/MarginContainer/VBoxContainer/ItemList/Item" method="_on_button_pressed"]
[connection signal="clicked" from="Control/PanelContainer/MarginContainer/HBoxContainer/CharacterContainer/MarginContainer/VBoxContainer/UtilitiesContainer/UtilityBoxes/EmptySpace/Button" to="." method="_on_item_deselected"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/HBoxContainer/CharacterContainer/MarginContainer/VBoxContainer/UtilitiesContainer/UtilityBoxes/EmptySpace/Button" to="Control/PanelContainer/MarginContainer/HBoxContainer/CharacterContainer/MarginContainer/VBoxContainer/UtilitiesContainer/UtilityBoxes/EmptySpace/Button" method="_on_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/HBoxContainer/CharacterContainer/MarginContainer/VBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="Control/PanelContainer/Back" to="." method="_on_back_pressed"]
